# PromptHub

./: .gitignore  local.properties  settings.gradle.kts
app/: build.gradle.kts  my-release-key.jks  proguard-rules.pro
app/src/androidTest/java/com/example/prompthub/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fdasklgd.c  fjabkslgwe.c  gbjelrkgjfdsg.c  gjklfdvdfwe.h  keyobf.c  keyobf_header.h  keyobf_retriever.c  native-lib.cpp
app/src/main/cpp/openssl/: conf.h  core_names.h  crypto.h  dsa.h  evp.h  fips_names.h  self_test.h  ssl.h  ui.h  x509_vfy.h
app/src/main/java/com/example/prompthub/: MainActivity.kt
app/src/main/java/com/example/prompthub/data/api/: ApiConfig.kt  ApiService.kt  AuthResponse.kt  GenerateImageRequest.kt  GenerateImageResponse.kt  GenerateNonsense.kt  RetrofitClient.kt  bgjslkerffa.kt  jgklfdsjglkfdg.kt  jgklrewjffdasg.kt  jglfdkgjdlskf.kt  jkfdlsgjfdl.kt  key5.kt  vfdadfjbasd.kt
app/src/main/java/com/example/prompthub/network/: ApiFunctions.kt  EnglishLevel100.kt  gjklfdgqewr.kt  jfkdlgjdsfl.kt  key4.kt
app/src/main/java/com/example/prompthub/ui/imagegeneration/: ImageGenerationFragment.kt  MaoZedong.kt  SkillIssue.kt  gdfjklfadvb.kt  gfbjaklf.kt  key3.kt
app/src/main/java/com/example/prompthub/ui/viewmodel/: HospitalFreeFood.kt  ImageViewModel.kt  gjklfaqfwfad.kt  key2.kt
app/src/main/java/com/example/prompthub/utils/: AuthObfuscator.kt  FriesInTheBag.kt  MumbaiSpiderman.kt  ObfuscationHelper.kt  RetrieveAuthHeader.kt  base64.kt  bgjrkjglakdfag.kt  bjdalfkjgadlf.kt  fjdsaklbjfe.kt  gfjdklgjersadf.kt  gjkjrwelkjdg.kt  key1.kt  keys.txt  test.kt  vjklwefdg.kt
app/src/main/java/security/: OpenSSLHelper.kt  TamperDetectedActivity.kt  gfkajljbgewf.kt  jbgklfdsgre.kt
app/src/main/res/layout/: activity_main.xml  fragment_image_generation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/prompthub/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
